hphp/test/slow/object_property/dynprop_write_notice.php.expectf
==== C ====

Notice: Created dynamic property with static name C::dynprop in %s/slow/object_property/dynprop_write_notice.php on line 5

Notice: Created dynamic property with dynamic name C::dynprop2 in %s/slow/object_property/dynprop_write_notice.php on line 7

Notice: Created dynamic property with static name C::dynprop3 in %s/slow/object_property/dynprop_write_notice.php on line 9
Error: Implicit null to int conversion for pre/post inc/dec
object(C) (3) {
  ["dynprop"]=>
  int(3)
  ["dynprop2"]=>
  int(2)
  ["dynprop3"]=>
  NULL
}

Notice: Created dynamic property with dynamic name C::dynprop in %s/slow/object_property/dynprop_write_notice.php on line 11

Notice: Created dynamic property with dynamic name C::dynprop2 in %s/slow/object_property/dynprop_write_notice.php on line 11

Notice: Created dynamic property with dynamic name C::dynprop3 in %s/slow/object_property/dynprop_write_notice.php on line 11
object(C) (3) {
  ["dynprop"]=>
  int(3)
  ["dynprop2"]=>
  int(2)
  ["dynprop3"]=>
  NULL
}

Notice: Created dynamic property with static name C::dynprop in %s/slow/object_property/dynprop_write_notice.php on line 13

Notice: Created dynamic property with dynamic name C::dynprop2 in %s/slow/object_property/dynprop_write_notice.php on line 13

Notice: Created dynamic property with static name C::dynprop3 in %s/slow/object_property/dynprop_write_notice.php on line 13
object(C) (3) {
  ["dynprop"]=>
  int(3)
  ["dynprop2"]=>
  int(2)
  ["dynprop3"]=>
  NULL
}
==== GMP ====

Notice: Created dynamic property with static name GMP::dynprop in %s/slow/object_property/dynprop_write_notice.php on line 5

Notice: Created dynamic property with dynamic name GMP::dynprop2 in %s/slow/object_property/dynprop_write_notice.php on line 7

Notice: Created dynamic property with static name GMP::dynprop3 in %s/slow/object_property/dynprop_write_notice.php on line 9
Error: Implicit null to int conversion for pre/post inc/dec
object(GMP) (4) {
  ["dynprop"]=>
  int(3)
  ["dynprop2"]=>
  int(2)
  ["dynprop3"]=>
  NULL
  ["num"]=>
  string(1) "0"
}

Notice: Created dynamic property with dynamic name GMP::dynprop in %s/slow/object_property/dynprop_write_notice.php on line 11

Notice: Created dynamic property with dynamic name GMP::dynprop2 in %s/slow/object_property/dynprop_write_notice.php on line 11

Notice: Created dynamic property with dynamic name GMP::dynprop3 in %s/slow/object_property/dynprop_write_notice.php on line 11
object(GMP) (4) {
  ["dynprop"]=>
  int(3)
  ["dynprop2"]=>
  int(2)
  ["dynprop3"]=>
  NULL
  ["num"]=>
  string(1) "0"
}

Notice: Created dynamic property with dynamic name GMP::dynprop in %s/slow/object_property/dynprop_write_notice.php on line 13

Notice: Created dynamic property with dynamic name GMP::dynprop2 in %s/slow/object_property/dynprop_write_notice.php on line 13

Notice: Created dynamic property with dynamic name GMP::dynprop3 in %s/slow/object_property/dynprop_write_notice.php on line 13
object(GMP) (4) {
  ["dynprop"]=>
  int(3)
  ["dynprop2"]=>
  int(2)
  ["dynprop3"]=>
  NULL
  ["num"]=>
  string(1) "0"
}
==== stdClass ====
Error: Implicit null to int conversion for pre/post inc/dec
object(stdClass) (3) {
  ["dynprop"]=>
  int(3)
  ["dynprop2"]=>
  int(2)
  ["dynprop3"]=>
  NULL
}
object(stdClass) (3) {
  ["dynprop"]=>
  int(3)
  ["dynprop2"]=>
  int(2)
  ["dynprop3"]=>
  NULL
}
object(stdClass) (3) {
  ["dynprop"]=>
  int(3)
  ["dynprop2"]=>
  int(2)
  ["dynprop3"]=>
  NULL
}
==== __PHP_Incomplete_Class ====
Error: Implicit null to int conversion for pre/post inc/dec
object(__PHP_Incomplete_Class) (4) {
  ["__PHP_Incomplete_Class_Name"]=>
  string(4) "Nope"
  ["dynprop"]=>
  int(3)
  ["dynprop2"]=>
  int(2)
  ["dynprop3"]=>
  NULL
}
object(__PHP_Incomplete_Class) (4) {
  ["__PHP_Incomplete_Class_Name"]=>
  string(4) "Nope"
  ["dynprop"]=>
  int(3)
  ["dynprop2"]=>
  int(2)
  ["dynprop3"]=>
  NULL
}
object(__PHP_Incomplete_Class) (4) {
  ["__PHP_Incomplete_Class_Name"]=>
  string(4) "Nope"
  ["dynprop"]=>
  int(3)
  ["dynprop2"]=>
  int(2)
  ["dynprop3"]=>
  NULL
}
